--- a/public/demo.html
+++ b/public/demo.html
@@ -449,7 +449,7 @@
 
             try {
                 // Step 1: Search for the restaurant
-                updateLoadingText('Searching Facebook, Instagram, Yelp, and Google News...');
+                updateLoadingText('🔍 Searching multiple data sources...');
 
                 const searchParams = new URLSearchParams({
                     query: restaurantName,
@@ -462,61 +462,28 @@
                 }
 
                 const searchData = await searchResponse.json();
+                console.log('Search data received:', searchData);
 
-                // Step 2: Analyze the restaurant
-                updateLoadingText('Analyzing Yelp reviews, social media, and news data...');
+                // Show search progress
+                updateLoadingText('✅ Data collection completed! Processing results...');
 
-                const analyzeResponse = await fetch('/api/prospect/analyze', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        id: searchData.id,
-                        comprehensiveData: searchData.comprehensiveData,
-                        searchData: searchData.searchData, // Fallback
-                        sources: searchData.sources,
-                    }),
-                });
-
-                if (!analyzeResponse.ok) {
-                    throw new Error('Analysis failed');
-                }
-
-                const analysisData = await analyzeResponse.json();
-
-                // Hide loading
+                // Show search results immediately
+                showSearchResults(searchData, restaurantName, location);
                 loadingState.classList.add('hidden');
-
-                // Show results with real data
-                showEnhancedResults(analysisData, searchData);
-
-                // Scroll to results
                 resultsSection.scrollIntoView({ behavior: 'smooth', block: 'start' });
 
             } catch (error) {
-                console.error('Error analyzing restaurant:', error);
+                console.error('Error during search:', error);
                 loadingState.classList.add('hidden');
 
-                // Show search results even if analysis fails
-                if (searchData) {
-                    showSearchResults(searchData, restaurantName, location);
-                    resultsSection.scrollIntoView({ behavior: 'smooth', block: 'start' });
+                // Show fallback demo data
+                showResults(restaurantName, location);
+                resultsSection.scrollIntoView({ behavior: 'smooth', block: 'start' });
 
-                    // Show info message instead of error
-                    setTimeout(() => {
-                        alert('Search completed successfully! AI analysis is temporarily unavailable, but you can see the collected data below.');
-                    }, 500);
-                } else {
-                    // Show fallback demo data only if search also failed
-                    showResults(restaurantName, location);
-                    resultsSection.scrollIntoView({ behavior: 'smooth', block: 'start' });
-
-                    // Show error message
-                    setTimeout(() => {
-                        alert('Using demo data. For full functionality, please ensure API keys are configured.');
-                    }, 500);
-                }
+                // Show error message
+                setTimeout(() => {
+                    alert('Search failed. Using demo data. Please check your internet connection.');
+                }, 500);
             }
         }
 
@@ -626,7 +593,7 @@
         }
 
         function showSearchResults(searchData, restaurantName, location) {
-            const resultsSection = document.getElementById('results');
+            const resultsSection = document.getElementById('resultsSection');
             resultsSection.classList.remove('hidden');
 
             // Update company info with real data
@@ -640,25 +607,57 @@
             document.getElementById('cuisineType').textContent = businessData?.cuisine?.join(', ') || 'Restaurant';
             document.getElementById('priceRange').textContent = businessData?.priceRange || 'N/A';
 
-            // Show basic insights instead of AI analysis
+            // Show detailed data collection results
+            const newsData = searchData.comprehensiveData.newsData || [];
+            const socialData = searchData.comprehensiveData.socialData || [];
+            const sources = searchData.comprehensiveData.sources || [];
+
             document.getElementById('businessInsights').innerHTML = `
                 <div class="space-y-4">
                     <div class="p-4 bg-green-900/20 border border-green-700 rounded-lg">
                         <h4 class="font-semibold text-green-300 mb-2">✅ Data Collection Successful</h4>
-                        <p class="text-sm text-gray-300">Successfully collected business information from multiple sources including search results, social media links, and news data.</p>
+                        <p class="text-sm text-gray-300">Successfully collected business information from ${sources.length} sources.</p>
+                        <div class="mt-2 text-xs text-gray-400">
+                            Sources: ${sources.map(s => s.type).join(', ')}
+                        </div>
                     </div>
+
                     ${businessData?.reviews?.length > 0 ? `
                     <div class="p-4 bg-blue-900/20 border border-blue-700 rounded-lg">
                         <h4 class="font-semibold text-blue-300 mb-2">📊 Review Summary</h4>
-                        <p class="text-sm text-gray-300">Found ${businessData.reviews.length} review(s) with an average rating of ${businessData.rating || 'N/A'} stars.</p>
+                        <p class="text-sm text-gray-300">Found ${businessData.reviews.length} review(s) with rating: ${businessData.rating || 'N/A'} stars</p>
+                        <div class="mt-2 text-xs text-gray-400 max-h-20 overflow-y-auto">
+                            Latest: "${businessData.reviews[0]?.text?.substring(0, 100)}..."
+                        </div>
                     </div>
                     ` : ''}
-                    ${searchData.comprehensiveData.newsData?.length > 0 ? `
+
+                    ${newsData.length > 0 ? `
                     <div class="p-4 bg-purple-900/20 border border-purple-700 rounded-lg">
-                        <h4 class="font-semibold text-purple-300 mb-2">📰 Recent News</h4>
-                        <p class="text-sm text-gray-300">Found ${searchData.comprehensiveData.newsData.length} recent news article(s) about this business.</p>
+                        <h4 class="font-semibold text-purple-300 mb-2">📰 Recent News (${newsData.length})</h4>
+                        <div class="space-y-1 text-xs text-gray-400 max-h-24 overflow-y-auto">
+                            ${newsData.slice(0, 3).map(news => `
+                                <div>• ${news.title}</div>
+                            `).join('')}
+                        </div>
                     </div>
                     ` : ''}
+
+                    ${socialData.length > 0 ? `
+                    <div class="p-4 bg-indigo-900/20 border border-indigo-700 rounded-lg">
+                        <h4 class="font-semibold text-indigo-300 mb-2">📱 Social Media Found</h4>
+                        <div class="space-y-1 text-xs text-gray-400">
+                            ${socialData.map(social => `
+                                <div>• ${social.platform}: @${social.handle || 'found'}</div>
+                            `).join('')}
+                        </div>
+                    </div>
+                    ` : ''}
+
+                    <div class="p-4 bg-yellow-900/20 border border-yellow-700 rounded-lg">
+                        <h4 class="font-semibold text-yellow-300 mb-2">⚠️ AI Analysis Status</h4>
+                        <p class="text-sm text-gray-300">AI analysis is temporarily unavailable due to network connectivity. Showing collected data only.</p>
+                    </div>
                 </div>
             `;
 
