feat: Update New Search button icon to CaretLeft
- Replace ArrowLeft with CaretLeft icon from Phosphor Icons
- Improve visual consistency with navigation patterns
- Maintain original styling and colors

--- a/public/demo.html
+++ b/public/demo.html
@@ -311,7 +311,7 @@
                         <div class="flex items-center space-x-4">
                             <button onclick="location.reload()" class="flex items-center space-x-2 text-gray-600 hover:text-primary transition-colors text-sm">
                                 <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 256 256">
-                                    <path d="m224,128-96-96v72H32a8,8,0,0,0,0,16h96v72Z"/>
+                                    <path d="M165.66,202.34a8,8,0,0,1-11.32,11.32l-80-80a8,8,0,0,1,0-11.32l80-80a8,8,0,0,1,11.32,11.32L91.31,128Z"/>
                                 </svg>
                                 <span>New Search</span>
                             </button>
