--- a/public/demo.html
+++ b/public/demo.html
@@ -248,7 +248,7 @@
             document.getElementById('companyInput').value = company;
         }
 
-        function startAnalysis() {
+        async function startAnalysis() {
             const input = document.getElementById('companyInput').value.trim();
             if (!input) {
                 alert('Please enter a company name or website');
@@ -262,10 +262,72 @@
             // Animate loading steps
             animateLoadingSteps();
 
-            // Simulate analysis (replace with actual API call)
-            setTimeout(() => {
+            try {
+                // Real API call to ProspectPulse backend
+                console.log('🔍 Starting real analysis for:', input);
+
+                // Parse input to extract company name and location
+                const parts = input.split(',').map(s => s.trim());
+                const companyName = parts[0];
+                const location = parts.length > 1 ? parts.slice(1).join(', ') : '';
+
+                const searchParams = new URLSearchParams({
+                    query: companyName,
+                    ...(location && { location })
+                });
+
+                console.log('Making API request to:', `/api/prospect/search?${searchParams}`);
+
+                const response = await fetch(`/api/prospect/search?${searchParams}`);
+                console.log('API response status:', response.status);
+
+                if (!response.ok) {
+                    throw new Error(`API request failed: ${response.status}`);
+                }
+
+                const data = await response.json();
+                console.log('API response data:', data);
+
+                // Show results with real data
+                showResults(input, data);
+
+            } catch (error) {
+                console.error('Analysis failed:', error);
+
+                // Show fallback demo results
+                console.log('Falling back to demo data');
                 showResults(input);
-            }, 8000);
+
+                // Show error notification
+                setTimeout(() => {
+                    const errorBanner = document.createElement('div');
+                    errorBanner.className = 'fixed top-4 right-4 bg-yellow-500 text-white p-4 rounded-lg shadow-lg z-50 max-w-sm';
+                    errorBanner.innerHTML = `
+                        <div class="flex items-start space-x-3">
+                            <svg class="w-5 h-5 mt-0.5 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd"/>
+                            </svg>
+                            <div>
+                                <div class="font-medium text-sm">Using Demo Data</div>
+                                <div class="text-xs mt-1">API temporarily unavailable. Showing sample results.</div>
+                            </div>
+                            <button onclick="this.parentElement.parentElement.remove()" class="ml-2 text-white hover:text-gray-200">
+                                <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
+                                    <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"/>
+                                </svg>
+                            </button>
+                        </div>
+                    `;
+                    document.body.appendChild(errorBanner);
+
+                    // Auto-remove after 5 seconds
+                    setTimeout(() => {
+                        if (errorBanner.parentElement) {
+                            errorBanner.remove();
+                        }
+                    }, 5000);
+                }, 1000);
+            }
         }
 
         function animateLoadingSteps() {
@@ -298,10 +360,33 @@
             updateStep();
         }
 
-        function showResults(company) {
+        function showResults(company, apiData = null) {
             // Hide loading, show results
             document.getElementById('loadingSection').classList.add('hidden');
             document.getElementById('resultsSection').classList.remove('hidden');
+
+            // Extract real data if available
+            let businessData = null;
+            let sources = [];
+            let isRealData = false;
+
+            if (apiData && apiData.comprehensiveData) {
+                businessData = apiData.comprehensiveData.businessData;
+                sources = apiData.comprehensiveData.sources || [];
+                isRealData = true;
+                console.log('Using real API data:', businessData);
+            } else {
+                console.log('Using demo data for:', company);
+            }
+
+            // Determine company info
+            const companyName = businessData?.name || company;
+            const companyDescription = businessData?.description ||
+                `${company} is a restaurant business with strong local presence and growth potential.`;
+            const founded = businessData?.founded || '2018';
+            const size = businessData?.size || 'Large';
+            const cuisine = businessData?.cuisine?.join(', ') || 'Fast Food';
+            const priceRange = businessData?.priceRange || '$$';
 
             // Enhanced results with actual demo data
             document.getElementById('resultsSection').innerHTML = `
@@ -335,8 +420,9 @@
                         <div class="bg-gray-700 p-6 text-white">
                             <div class="flex items-start justify-between">
                                 <div>
-                                    <h2 class="text-2xl font-bold mb-2">${company}</h2>
-                                    <p class="text-gray-200 text-base">Fast food restaurant chain with strong local presence and growth potential in Southeast Asia.</p>
+                                    <h2 class="text-2xl font-bold mb-2">${companyName}</h2>
+                                    <p class="text-gray-200 text-base">${companyDescription}</p>
+                                    ${isRealData ? '<div class="mt-2 text-xs text-green-300">✅ Real-time data</div>' : '<div class="mt-2 text-xs text-yellow-300">⚠️ Demo data</div>'}
                                 </div>
                                 <div class="flex space-x-2">
                                     <div class="w-10 h-10 bg-white/20 rounded-lg flex items-center justify-center">
@@ -351,19 +437,19 @@
                         <div class="p-6">
                             <div class="grid grid-cols-4 gap-4">
                                 <div class="text-center">
-                                    <div class="text-2xl font-bold text-primary mb-1">2018</div>
+                                    <div class="text-2xl font-bold text-primary mb-1">${founded}</div>
                                     <div class="text-xs text-gray-500">Founded</div>
                                 </div>
                                 <div class="text-center">
-                                    <div class="text-2xl font-bold text-success mb-1">Large</div>
+                                    <div class="text-2xl font-bold text-success mb-1">${size}</div>
                                     <div class="text-xs text-gray-500">Size</div>
                                 </div>
                                 <div class="text-center">
-                                    <div class="text-2xl font-bold text-accent mb-1">Fast Food</div>
+                                    <div class="text-2xl font-bold text-accent mb-1">${cuisine}</div>
                                     <div class="text-xs text-gray-500">Category</div>
                                 </div>
                                 <div class="text-center">
-                                    <div class="text-2xl font-bold text-warning mb-1">$$</div>
+                                    <div class="text-2xl font-bold text-warning mb-1">${priceRange}</div>
                                     <div class="text-xs text-gray-500">Price Range</div>
                                 </div>
                             </div>
@@ -388,7 +474,7 @@
                                         <div class="w-5 h-5 bg-blue-500 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
                                             <span class="text-white text-xs font-bold">1</span>
                                         </div>
-                                        <p class="text-gray-700 text-sm">"I noticed KFC Singapore has been expanding rapidly. How are you managing POS operations across multiple locations?"</p>
+                                        <p class="text-gray-700 text-sm">"I noticed ${companyName} has been ${isRealData ? 'building a strong presence' : 'expanding rapidly'}. How are you managing POS operations across multiple locations?"</p>
                                     </div>
                                     <button class="mt-2 text-xs text-blue-500 hover:text-blue-600 font-medium">📋 Copy</button>
                                 </div>
@@ -397,7 +483,7 @@
                                         <div class="w-5 h-5 bg-green-500 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
                                             <span class="text-white text-xs font-bold">2</span>
                                         </div>
-                                        <p class="text-gray-700 text-sm">"Your digital ordering growth is impressive. I'd love to show you how StoreHub can optimize your omnichannel strategy."</p>
+                                        <p class="text-gray-700 text-sm">"With ${companyName}'s focus on customer experience, I'd love to show you how StoreHub can optimize your omnichannel strategy."</p>
                                     </div>
                                     <button class="mt-2 text-xs text-green-500 hover:text-green-600 font-medium">📋 Copy</button>
                                 </div>
@@ -533,10 +619,15 @@
                                 <div class="text-xs text-gray-500">Recent Updates</div>
                             </div>
                         </div>
-                        <div class="mt-4 p-3 bg-green-50 border border-green-200 rounded-lg">
+                        <div class="mt-4 p-3 ${isRealData ? 'bg-green-50 border-green-200' : 'bg-yellow-50 border-yellow-200'} border rounded-lg">
                             <div class="flex items-center space-x-2">
-                                <div class="w-2 h-2 bg-green-500 rounded-full"></div>
-                                <span class="text-xs text-green-700 font-medium">Analysis completed in 8.2 seconds • All data sources active</span>
+                                <div class="w-2 h-2 ${isRealData ? 'bg-green-500' : 'bg-yellow-500'} rounded-full"></div>
+                                <span class="text-xs ${isRealData ? 'text-green-700' : 'text-yellow-700'} font-medium">
+                                    ${isRealData ?
+                                        `Analysis completed • ${sources.length} data sources analyzed` :
+                                        'Demo mode • Sample data displayed'
+                                    }
+                                </span>
                             </div>
                         </div>
                     </div>
