--- a/public/fancy-demo.html
+++ b/public/fancy-demo.html
@@ -60,6 +60,18 @@
             0%, 50% { opacity: 1; }
             51%, 100% { opacity: 0.3; }
         }
+        .lightning-flash {
+            animation: lightningFlash 2s infinite;
+        }
+        @keyframes lightningFlash {
+            0% { opacity: 0.3; transform: rotate(0deg); }
+            10% { opacity: 1; transform: rotate(0deg); }
+            20% { opacity: 0.3; transform: rotate(0deg); }
+            30% { opacity: 1; transform: rotate(0deg); }
+            40% { opacity: 0.3; transform: rotate(0deg); }
+            50% { opacity: 0.3; transform: rotate(45deg); }
+            100% { opacity: 0.3; transform: rotate(360deg); }
+        }
     </style>
 </head>
 <body class="bg-background min-h-screen">
@@ -114,8 +126,8 @@
                         <!-- Single Input Field -->
                         <div class="relative">
                             <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
-                                <svg class="h-5 w-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/>
+                                <svg class="h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 256 256">
+                                    <path d="m229.66,218.34-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"/>
                                 </svg>
                             </div>
                             <input
