feat: Add social media news sources and improve AI analysis
- Add social media content search using site: operators for Facebook, Instagram, LinkedIn, Twitter
- Implement searchSocialMediaContent method in GoogleNews service
- Enhance relevance scoring for social media sources
- Integrate social media search into data collection pipeline
- Increase Gemini API maxOutputTokens to 4096 for longer responses
- Improve JSON parsing with better truncation handling
- Fix apostrophe handling in AI-generated JSON responses
- Add comprehensive social media news source integration

--- a/public/fancy-demo.html
+++ b/public/fancy-demo.html
@@ -374,7 +374,7 @@
                                         <div class="w-5 h-5 bg-blue-500 rounded-full flex items-center justify-center flex-shrink-0 mt-0.5">
                                             <span class="text-white text-xs font-bold">1</span>
                                         </div>
-                                        <p class="text-gray-700 text-sm">"I noticed KFC Singapore has been expanding rapidly. How are you managing POS operations across multiple locations?"</p>
+                                        <p class="text-gray-700 text-sm">"I noticed ${company} has been expanding rapidly. How are you managing POS operations across multiple locations?"</p>
                                     </div>
                                     <button class="mt-2 text-xs text-blue-500 hover:text-blue-600 font-medium">📋 Copy</button>
                                 </div>
