--- a/public/demo.html
+++ b/public/demo.html
@@ -250,7 +250,7 @@
     ></div>
 
     <!-- Hero Section with Search -->
-    <div class="min-h-screen gradient-bg relative overflow-hidden">
+    <div class="min-h-screen pb-10 gradient-bg relative overflow-hidden">
       <!-- Animated Background Elements -->
       <div class="absolute inset-0">
         <div
